html bugfix: now for small displays, the terms "user manual" and "reference manual" are properly aligned in the TOC

--- a/Manual_tools/src/latex_converter_config/html/modern.css
+++ b/Manual_tools/src/latex_converter_config/html/modern.css
@@ -55,7 +55,7 @@ td.TocTitle,
 td.TocContents,
 td.TocIndex,
 td.TocBibliography,
-td.TocChapter          { font-weight: bold; }
+ *.TocChapter          { font-weight: bold; }
 td.TocSection          {  }
 td.TocSubsection       {  }
 td.TocSubsubsection    {  }
